@@ -6,7 +6,8 @@ pixmap_DATA = 	giver-16.png \
 				giver-32.png \
 				giver-48.png \
 				giver-256.png \
-				gravatar.png 
+				gravatar.png \
+				blankphoto.png 
 
 hicolordir = $(datadir)/icons/hicolor
 
@@ -17,7 +18,8 @@ tango_icons = 				\
 				giver-32.png \
 				giver-48.png \
 				giver-256.png \
-				gravatar.png 
+				gravatar.png \
+				blankphoto.png 
 
 install-data-local:
 	@-$(mkinstalldirs) $(DESTDIR)$(hicolordir)/16x16/apps $(DESTDIR)$(hicolordir)/24x24/apps $(DESTDIR)$(hicolordir)/32x32/apps $(DESTDIR)$(hicolordir)/48x48/apps $(DESTDIR)$(hicolordir)/256x256/apps
@@ -26,6 +28,7 @@ install-data-local:
 	$(INSTALL_DATA) $(srcdir)/giveroff-24.png $(DESTDIR)$(hicolordir)/24x24/apps/giveroff.png
 	$(INSTALL_DATA) $(srcdir)/giver-32.png $(DESTDIR)$(hicolordir)/32x32/apps/giver.png
 	$(INSTALL_DATA) $(srcdir)/giver-48.png $(DESTDIR)$(hicolordir)/48x48/apps/giver.png
+	$(INSTALL_DATA) $(srcdir)/blankphoto.png $(DESTDIR)$(hicolordir)/48x48/apps/blankphoto.png
 	$(INSTALL_DATA) $(srcdir)/gravatar.png $(DESTDIR)$(hicolordir)/48x48/apps/gravatar.png
 	$(INSTALL_DATA) $(srcdir)/giver-256.png $(DESTDIR)$(hicolordir)/256x256/apps/giver.png
 
@@ -47,6 +50,7 @@ uninstall-hook:
 	rm -f $(DESTDIR)$(hicolordir)/32x32/apps/giver.png
 	rm -f $(DESTDIR)$(hicolordir)/48x48/apps/giver.png
 	rm -f $(DESTDIR)$(hicolordir)/48x48/apps/gravatar.png
+	rm -f $(DESTDIR)$(hicolordir)/48x48/apps/blankphoto.png
 	rm -f $(DESTDIR)$(hicolordir)/256x256/apps/giver.png
 
 noinst_DATA =
